kubernetes/deployexercise2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bearsintheforest
  name: bearsintheforest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bearsintheforest
  template:
    metadata:
      labels:
        app: bearsintheforest
    spec:
      containers:
      - image: brianpzaide/bearsintheforest:latest
        name: bearsintheforest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
