kubernetes/svcexercise2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bearsintheforest
  name: bearsintheforest
spec:
  ports:
  - port: 6060
    protocol: TCP
    targetPort: 8080
  selector:
    app: bearsintheforest
  type: ClusterIP
